Fix logo width on small screens

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -33,7 +33,7 @@
 
 .masthead #intro .brand {
    position: relative;
-   width: 50vw;
+   width: 70vw;
    padding: 20px;
    text-align: center;
    margin: auto;
